--- a/src/css/Projects.scss
+++ b/src/css/Projects.scss
@@ -1,31 +1,77 @@
 @import "../css/colors.scss";
 
-.Projects{
-    height: 100vh;
-    background-color: grey;
+.Projects-container{
+    height: 600px;
+    margin: 50px;
     display: flex;
-}
+    .card-container{
+        *{
+            font-size: large;
+            font-weight: 800;
+        }
+        max-width: 500px;
+        height: 300px;
+        margin: 50px auto;
+        .card{
+            background-color: white;
+            border: 1px solid grey;
+            border-radius: 18px;
+            .image{
+                padding: 8px;
+                img{
+                    width: 100%;
+                    height: 400px;
+                    border-radius: 12px;
+                    object-fit: cover;
+                    transition: 750ms;
 
-.Project{
-    height: 500px;
-    width: 33%;
-    display: flex;
-    margin: 20px;
-    border: black solid 2px;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    .header{
-        color: white;
-        background-color: $dark;
-        text-align: center;
-        width: 100%;
-        height: 10%;
-        border-radius: 10px;
-    }
-    img{
-        width: 100%;
-        height: 75%;
+                    &:hover{
+                        transform: scale(1.25);
+                        transition: 750ms;
+                    }
+                }
+            }
+            .card-details{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .name{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: $purple-dark;
+                    height: 75px;
+                    width: 100%;
+                    color: white;
+                }
+                .desc{
+                    padding: 20px;
+                    p{
+                        text-align: center;
+                        font-weight: 100;       
+                    }
+                }
+                .goto{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border: 3px solid $purple-dark;
+                    border-radius: 10px;
+                    width: 200px;
+                    height: 40px;
+                    background-color: $purple-dark;
+                    color: white;
+                    margin: 20px auto 50px auto;
+                    font-size: small;
+                    transition: 500ms;
+
+                    &:hover{
+                        color: $purple-dark;
+                        background-color: white;
+                        transition: 750ms;
+                    }
+                }
+            }
+        }
     }
 }
