--- a/src/css/Projects.scss
+++ b/src/css/Projects.scss
@@ -1,83 +1,128 @@
 @import "../css/colors.scss";
 
-.Projects-container{
-    height: 600px;
-    margin: 50px;
+.container {
     display: flex;
-    .card-container{
-        *{
-            font-size: large;
-            font-weight: 800;
+    flex-direction: column;
+    justify-content: space-between;
+    p{
+        margin: 40px auto 0 auto;
+        font-size: 75px;
+        font-weight: 700;
+        color: $purple-primary;
+        text-shadow:5px 5px grey;
+    }
+
+    .Projects-container {
+        height: 90vh;
+        margin-top: 50px;
+        display: flex;
+
+        .card-container {
+            * {
+                font-size: large;
+                font-weight: 800;
+            }
+
+            max-width: 500px;
+            height: 300px;
+            margin: 50px auto;
+
+            .card {
+                box-shadow: 6px 18px 26px -5px $purple-dark;
+                background-color: white;
+                border: 1px solid rgb(148, 141, 141);
+                border-radius: 18px;
+                margin-bottom: 50px;
+                width: 450px;
+
+                .image {
+                    padding: 8px;
+
+                    img {
+                        width: 100%;
+                        height: 400px;
+                        border-radius: 12px;
+                        object-fit: cover;
+                        transition: 750ms;
+
+                        &:hover {
+                            transform: scale(1.1);
+                            transition: 750ms;
+                            border-radius: 15px;
+                            box-shadow: 6px 18px 26px -5px $purple-dark;
+                        }
+                    }
+                }
+
+                .card-details {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    .name {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        background-color: $purple-dark;
+                        height: 75px;
+                        width: 100%;
+                        color: white;
+                    }
+
+                    .desc {
+                        padding: 20px;
+
+                        p {
+                            text-align: center;
+                            font-weight: 100;
+                        }
+                    }
+
+                    .goto {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border: 3px solid $purple-dark;
+                        border-radius: 10px;
+                        width: 200px;
+                        height: 40px;
+                        background-color: $purple-dark;
+                        color: white;
+                        margin: 20px auto 50px auto;
+                        font-size: small;
+                        transition: 500ms;
+
+                        &:hover {
+                            color: $purple-dark;
+                            background-color: white;
+                            transform: scale(1.1);
+                            transition: 750ms;
+                        }
+                    }
+                }
+            }
         }
-        max-width: 500px;
-        height: 300px;
-        margin: 50px auto;
-        .card{
-            box-shadow: 6px 18px 26px -5px $purple-dark;
+    }
+
+    .more {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: solid 3px $purple-dark;
+        border-radius: 15px;
+        width: 150px;
+        height: 45px;
+        margin: 0 auto 20px auto;
+        background-color: $purple-dark;
+        color: white;
+        font-weight: 600;
+        transition: 750ms;
+
+        &:hover {
+            color: $purple-dark;
             background-color: white;
-            border: 1px solid rgb(148, 141, 141);
-            border-radius: 18px;
-            margin-bottom: 50px;
-            width: 450px;
-            .image{
-                padding: 8px;
-                img{
-                    width: 100%;
-                    height: 400px;
-                    border-radius: 12px;
-                    object-fit: cover;
-                    transition: 750ms;
-
-                    &:hover{
-                        transform: scale(1.1);
-                        transition: 750ms;
-                        border-radius: 15px;
-                        box-shadow: 6px 18px 26px -5px $purple-dark;
-                    }
-                }
-            }
-            .card-details{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                .name{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    background-color: $purple-dark;
-                    height: 75px;
-                    width: 100%;
-                    color: white;
-                }
-                .desc{
-                    padding: 20px;
-                    p{
-                        text-align: center;
-                        font-weight: 100;       
-                    }
-                }
-                .goto{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border: 3px solid $purple-dark;
-                    border-radius: 10px;
-                    width: 200px;
-                    height: 40px;
-                    background-color: $purple-dark;
-                    color: white;
-                    margin: 20px auto 50px auto;
-                    font-size: small;
-                    transition: 500ms;
-
-                    &:hover{
-                        color: $purple-dark;
-                        background-color: white;
-                        transform: scale(1.1);
-                        transition: 750ms;
-                    }
-                }
-            }
+            transform: scale(1.05);
+            transition: 750ms;
         }
     }
 }
