--- a/src/css/Skills.scss
+++ b/src/css/Skills.scss
@@ -34,7 +34,7 @@
                 animation-name: Growing;
                 animation-fill-mode: both;
                 height: 100%;
-                background-color: $purple-dark;
+                background-color: $primary-darker;
                 border-radius: 3px;
             }
         }
