--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -1,3 +1,5 @@
-$purple-primary: #6C63FF;
-$purple-dark: #2b21f2;
-$dark: #2d2d60;
+$primary-lighter: #4e2db9;
+$primary-light: #635985;
+$primary: #443C68;
+$primary-dark: #393053;
+$primary-darker: #18122B;
