--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+@font-face {
+  font-family: "Ubuntu";
+  src: url("./fonts/Ubuntu-Regular.ttf") format(ttf);
 }
 
-body{
+body {
   margin: 0;
   padding: 0;
   background-color: black;
+  font-family: "Ubuntu";
 }
