--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
 @font-face {
   font-family: "Ubuntu";
-  src: url("./fonts/Ubuntu-Regular.ttf") format(ttf);
+  src: url("./fonts/Ubuntu-Regular.ttf");
 }
 
 body {
   margin: 0;
   padding: 0;
   background-color: black;
+}
+
+* {
   font-family: "Ubuntu";
 }
