--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,21 +1,44 @@
 #navbar {
-  height: 15vh;
-  background-color: #740824;
+  height: 10vh;
   color: white;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-top: 2rem;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
   #logo {
     font-size: 3rem;
   }
 
   #nav-buttons {
+    &::before {
+      content: "";
+      width: 16rem;
+      display: inline-flex;
+    }
+    height: 100%;
+
     .nav-button {
+      margin: 0 1rem 1rem 1rem;
       border: none;
       background-color: transparent;
       color: white;
       font-size: 1.5rem;
+      transition: opacity 250ms ease-in-out, border-bottom 500ms;
+      opacity: 50%;
+      font-weight: bold;
+      height: 100%;
+      border-bottom: solid 3px transparent;
+      
+      &:hover {
+        opacity: 100% !important;
+        border-bottom: solid 3px white;
+      }
     }
   }
 
@@ -24,20 +47,44 @@
     justify-content: center;
     font-size: 1.5rem;
     align-items: center;
+    height: 100%;
 
-    .social-icon {
-      margin: 0 15px;
-      height: 25px;
-      width: 25px;
+    #icons {
+      padding: 0 1rem;
+      margin: 0 0.2rem;
+
+      .social-icon {
+        border: solid white 1px;
+        border-radius: 100%;
+        margin: 0 0.2rem;
+        height: 15px;
+        width: 15px;
+        padding: 0.5rem;
+        transition: box-shadow 250ms;
+        box-shadow: 0 0 1px 1px transparent;
+        
+        &:hover {
+          // transform: scale(1.1);
+          box-shadow: 0 0 1px 1px white;
+        }
+      }
     }
 
+
     #hire-button {
-      border: solid white 5px;
+      border: solid white 1px;
       border-radius: 0.2rem;
       background-color: transparent;
       color: white;
       font-size: 1.5rem;
       margin-left: 1rem;
+      height: 85%;
+      width: 8em;
+      transition: box-shadow 250ms;
+
+      &:hover {
+        box-shadow: inset 0 0 2px 2px white;
+      }
     }
   }
 }
