--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,4 +3,10 @@
   width: 100vw;
   position: relative;
   overflow: hidden;
+
+  #particles {
+    z-index: -1;
+    opacity: 0.2;
+    position: fixed;
+  }
 }
