--- a/src/styles/Skill.scss
+++ b/src/styles/Skill.scss
@@ -3,20 +3,24 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 10rem;
+  height: 10rem;
 
-  #skill {
-    margin: 0 2rem;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    transform: rotate(45deg);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .pie {
+    width: 10rem;
+    height: 10rem;
+    position: relative;
 
-    p {
-      transform: rotate(-45deg);
-      font-size: 1.5rem;
+    .chart {
+      position: absolute;
+      top: 0;
+    }
+
+    .perf {
+      position: absolute;
+      left: 50%;
+      top: 25%;
+      transform: translate(-50%);
     }
   }
 }
