--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -8,14 +8,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 75%;
-    width: 75%;
+    height: 50%;
+    width: 50%;
     background-color: #151315;
-    border-radius: 5rem 5rem 0 0;
+    border-radius: 5rem;
 
     #skills-list {
-      margin-top: 5rem;
+      margin-top: 2rem;
       display: flex;
+      justify-content: center;
+      align-items: center;
+
+      #next,
+      #prev {
+        fill: currentColor;
+        transform: scale(2);
+      }
     }
   }
 }
