--- a/src/styles/Skill.scss
+++ b/src/styles/Skill.scss
@@ -1,3 +1,30 @@
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slide-right {
+  from {
+    transform: translateX(25%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-left {
+  from {
+    transform: translateX(100%) rotate(-90deg);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
 #skill-container {
   display: flex;
   flex-direction: column;
@@ -25,6 +52,6 @@
   }
 
   .tech {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
 }
