--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -1,5 +1,27 @@
+@keyframes fade-out-right {
+  from {
+    opacity: 1;
+    // transform: rotate(0);
+  }
+  to {
+    opacity: 0;
+    // transform: rotate(90deg);
+  }
+}
+
+@keyframes fade-out-left {
+  from {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(50%);
+  }
+}
+
 #skills-container {
-  height: 100%;
+  height: 75%;
   display: grid;
   place-items: center;
 
@@ -8,7 +30,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 75%;
+    height: 100%;
     width: 50%;
     background-color: #151315;
     border-radius: 5rem;
@@ -21,10 +43,6 @@
       align-items: center;
       gap: 3rem;
       transition: 1500ms;
-
-      .skill-item {
-        animation: fade 1000ms linear;
-      }
 
       #skill-items {
         display: flex;
@@ -65,10 +83,7 @@
       align-items: flex-end;
       margin-bottom: 2rem;
       place-content: center;
-      //   height: 100%;
       width: 100%;
-
-      //   z-index: 400;
 
       .indicator {
         height: 0.3rem;
@@ -77,6 +92,29 @@
         border-radius: 5px;
         margin: 0.1rem;
         transition: width 250ms linear;
+      }
+    }
+  }
+
+  #other-skills-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    p {
+      color: white;
+    }
+
+    #other-skills {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        width: 40px;
+        height: 40px;
+        margin: 0 0.5rem;
       }
     }
   }
