--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -1,10 +1,55 @@
-#projects {
-  height: 100%;
-  display: grid;
-  place-content: center;
-  color: white;
+@keyframes jiggle-right {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(10%);
+  }
+}
 
-  a {
-    text-decoration: none;
+@keyframes jiggle-left {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-10%);
+  }
+}
+
+#projects-container {
+  height: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  #header {
+    margin: 1rem 0;
+    h1 {
+      font-size: 1.5rem;
+    }
+
+    h3 {
+      font-size: 1rem;
+    }
+  }
+
+  .projects {
+    display: flex;
+    gap: 1rem;
+    height: 75%;
+    width: 100%;
+
+    #prev-container,
+    #next-container {
+      display: flex;
+      align-items: center;
+    }
+
+    #prev,
+    #next {
+      height: 3rem;
+      width: 3rem;
+    }
   }
 }
