--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -1,3 +1,12 @@
+@keyframes jiggle-down {
+  from {
+    transform: translateY(25%);
+  }
+  to {
+    transform: translateY(-25%);
+  }
+}
+
 #layout {
   height: 100vh;
   width: 100vw;
@@ -10,5 +19,21 @@
     z-index: -1;
     opacity: 0.2;
     position: fixed;
+  }
+
+  #arrows {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10%;
+
+    #down-arrow,
+    #up-arrow {
+      z-index: 50;
+      height: 2rem;
+      width: 2rem;
+      color: white;
+      animation: jiggle-down 1000ms infinite alternate;
+    }
   }
 }
