--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -16,12 +16,33 @@
   }
 }
 
+@keyframes slide-up {
+  from {
+    transform: translateY(10%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 #contact {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  animation: show 1250ms ease-in-out, slide-up 1250ms ease-in-out;
 
   #contact-header {
     color: white;
@@ -30,6 +51,16 @@
     align-items: center;
     margin-bottom: 1rem;
     justify-content: center;
+
+    h1 {
+      font-size: 1.5rem;
+    }
+
+    h3 {
+      font-weight: 100;
+      font-size: 1rem;
+    }
+
     * {
       margin: 0;
     }
