--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -114,7 +114,7 @@
       color: white;
       font-size: 1.5rem;
       margin-left: 1rem;
-      height: 85%;
+      height: 3rem;
       width: 8em;
       transition: box-shadow 250ms;
 
