--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -18,6 +18,18 @@
   }
 }
 
+#menu {
+  height: 2rem;
+  width: 2rem;
+  color: white;
+  font-size: 2.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  z-index: 3;
+}
+
 #navbar {
   height: 10vh;
   color: white;
@@ -120,6 +132,47 @@
 
       &:hover {
         box-shadow: inset 0 0 2px 2px white;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  #menu {
+    visibility: visible;
+    margin: 0.75rem;
+  }
+
+  #navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    height: 50vh;
+    width: 62%;
+    z-index: 2;
+    background-color: black;
+    border-radius: 1rem;
+    margin-top: 0;
+    transition: all 500ms;
+    opacity: 1;
+    animation: none;
+    transform: translateX(-100%);
+
+    #nav-buttons {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    #social {
+      flex-direction: column;
+      align-items: center;
+      margin: 1rem 0;
+      justify-content: center;
+
+      #icons {
+        .icon {
+          margin: 0 0.5rem 1rem 0.5rem;
+        }
       }
     }
   }
