--- a/src/styles/Skills.scss
+++ b/src/styles/Skills.scss
@@ -129,7 +129,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // animation: hide 1250ms ease-in-out, show 1250ms 1250ms ease-in-out;
 
     p {
       color: white;
@@ -144,6 +143,53 @@
         width: 40px;
         height: 40px;
         margin: 0 0.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  #skills-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    #skills {
+      color: white;
+      display: flex;
+      align-items: center;
+      height: 50%;
+      width: 90%;
+      background-color: #151315;
+      border-radius: 1rem;
+      margin-top: 3rem;
+
+      #skills-list {
+        .prev-container {
+          left: 1rem;
+          height: 3rem;
+          width: 3rem;
+          font-size: 1.5rem;
+        }
+        .next-container {
+          right: 1rem;
+          height: 3rem;
+          width: 3rem;
+          font-size: 1.5rem;
+        }
+      }
+    }
+
+    #other-skills-container {
+      flex-direction: column;
+      justify-content: flex-start;
+
+      #other-skills {
+        flex-wrap: wrap;
+        gap: 1rem;
       }
     }
   }
